examples/passing/semantics/if.gm
$r = 0;
x = 0;
if ($r == 0) {
    x = x + 1;
} else {
    x = 0;
}
if ($r == 1) {
    x = 0;
} else {
    x = x + 1;
}
assert (x == 2);
